tests/ui/coercion/array-slice-coercion-mismatch-15783.stderr
error[E0308]: mismatched types
  --> $DIR/array-slice-coercion-mismatch-15783.rs:12:19
   |
LL |     let msg = foo(x);
   |               --- ^ expected `Option<&[&str]>`, found `Option<&[&str; 1]>`
   |               |
   |               arguments to this function are incorrect
   |
   = note: expected enum `Option<&[&str]>`
              found enum `Option<&[&str; 1]>`
note: function defined here
  --> $DIR/array-slice-coercion-mismatch-15783.rs:5:8
   |
LL | pub fn foo(params: Option<&[&str]>) -> usize {
   |        ^^^ -----------------------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
